# Copyright (c) 2000, Red Hat, Inc.
# 
# This file is part of Source-Navigator.
# 
# Source-Navigator is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as published
# by the Free Software Foundation; either version 2, or (at your option)
# any later version.
# 
# Source-Navigator is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
# 
# You should have received a copy of the GNU General Public License along
# with Source-Navigator; see the file COPYING.  If not, write to
# the Free Software Foundation, 59 Temple Place - Suite 330, Boston,
# MA 02111-1307, USA.
# 
AUTOMAKE_OPTIONS = cygnus

## Process this file with automake to create Makefile.in.

progdir = $(datadir)/snavigator/gui

prog_DATA = tclIndex bindings.tcl bindxtnd.tcl bugreport.tcl \
combo.tcl dialog.tcl diff.tcl dirdialog.tcl \
elix.tcl emacs.tcl error.tcl \
font.tcl grep.tcl help.tcl highlight.tcl history.tcl html.tcl \
i18n.tcl ide.tcl sninit.tcl ipc.tcl \
misc.tcl panewd.tcl paths.tcl printdialog.tcl \
rcs.tcl selector.tcl text.tcl utilities.tcl version.tcl \
history.tcl retriever.tcl statistics.tcl \
multiview.tcl multichild.tcl classpane.tcl classtreepane.tcl \
editorpane.tcl snpdbg.tcl symbolbrowser.tcl includepane.tcl xrefpane.tcl \
retrieverpane.tcl greppane.tcl makepane.tcl preferences.tcl tools.tcl \
window.tcl projedit.tcl font.tcl projmng.tcl \
gdbtk.tcl tmeter.tcl project.tcl targetmgr.tcl buildtarget.tcl \
targetedit.tcl toolchain.tcl conftooldlg.tcl mkfilegen.tcl \
tree.tcl optiontrace.tcl tclgrepdriver.tcl execgrepdriver.tcl \
winprint.tcl

tclIndex:
	@echo "no tclIndex file found, run make in the snavigator/gui dir"
